--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <p id="titVid">PARA A MAIOR CCXP DE TODOS OS TEMPOS</p>
             <div id="img">
-               <img src="imagens/alerquina.svg" width="90%">
+               <video src="Video/Arlequina.mp4" width="90%"></video>
             </div>
          </div>
      </div>
