--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <h1 id="hora">00<span>H</span></h1>
                 </div>
                 <div>
-                    <h1 id="minuto">00<span>M</span></h1>
+                    <h1 id="minuto">00<span>M</h1>
                 </div>
                 <div>
                 <h1 id="segundo">00 <span>S</span>
